<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <artifactId>armadillo-service</artifactId>
    <groupId>org.molgenis</groupId>
    <version>2.2.4-SNAPSHOT</version>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <packaging>jar</packaging>

  <artifactId>armadillo</artifactId>

  <properties>
    <org.obiba.datashield.ds4j-version>2.0.0</org.obiba.datashield.ds4j-version>

    <dockerfile.repository>registry.hub.docker.com/molgenis/${project.artifactId}
    </dockerfile.repository>
    <dockerfile.tag>${project.version}</dockerfile.tag>
    <maven.compiler.target>17</maven.compiler.target>
    <maven.compiler.source>17</maven.compiler.source>
  </properties>

  <repositories>
    <repository>
      <id>obiba</id>
      <name>obiba</name>
      <url>https://obiba.jfrog.io/artifactory/libs-release-local/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.obiba.datashield</groupId>
      <artifactId>ds4j-core</artifactId>
      <version>${org.obiba.datashield.ds4j-version}</version>
    </dependency>
    <dependency>
      <groupId>org.obiba.datashield</groupId>
      <artifactId>ds4j-r</artifactId>
      <version>${org.obiba.datashield.ds4j-version}</version>
    </dependency>
    <dependency>
      <groupId>org.molgenis</groupId>
      <artifactId>r</artifactId>
      <version>${project.version}</version>
    </dependency>
    <dependency>
      <groupId>io.swagger.core.v3</groupId>
      <artifactId>swagger-annotations</artifactId>
    </dependency>
    <dependency>
      <groupId>com.google.code.gson</groupId>
      <artifactId>gson</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-oauth2-client</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-oauth2-jose</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-oauth2-resource-server</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-registry-prometheus</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework</groupId>
      <artifactId>spring-aspects</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-ui</artifactId>
    </dependency>
    <dependency>
      <groupId>io.minio</groupId>
      <artifactId>minio</artifactId>
    </dependency>
    <dependency>
      <groupId>net.logstash.logback</groupId>
      <artifactId>logstash-logback-encoder</artifactId>
      <version>6.6</version>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>com.c4-soft.springaddons</groupId>
      <artifactId>spring-security-oauth2-test-webmvc-addons</artifactId>
      <version>4.5.1</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <!-- Needed for mocking records (final classes) -->
      <groupId>org.mockito</groupId>
      <artifactId>mockito-inline</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>
  <build>
    <plugins>
      <plugin>
        <groupId>pl.project13.maven</groupId>
        <artifactId>git-commit-id-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>build-info</id>
            <goals>
              <goal>build-info</goal>
            </goals>
            <configuration>
              <additionalProperties>
                <java.version>${java.version}</java.version>
              </additionalProperties>
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
            </path>
            <path>
              <groupId>com.google.auto.value</groupId>
              <artifactId>auto-value</artifactId>
            </path>
            <!--
            Manually pull in auto-service-annotations so that it is part of the
            processor path because auto-value has it set to provided scope.
            This dependency is needed due to the retention change in
            https://github.com/google/auto/commit/628df548685b4fc0f2a9af856f97cc2a68da246b
            where the RetentionPolicy changed from SOURCE to CLASS.
            Due to the RetentionPolicy change to CLASS we must have the
            annotations available on the processor path otherwise the following
            will error will be thrown. (This is a particular problem with the
            annotation processor configuration in IntelliJ)
            Error:java: java.lang.NoClassDefFoundError: com/google/auto/service/AutoService
              com.google.auto.service.AutoService
            -->
            <path>
              <groupId>com.google.auto.service</groupId>
              <artifactId>auto-service-annotations</artifactId>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <plugin>
        <groupId>com.google.cloud.tools</groupId>
        <artifactId>jib-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>release</id>
            <phase>deploy</phase>
            <goals>
              <goal>build</goal>
            </goals>
            <configuration>
              <to>
                <tags>
                  <!-- additional tags -->
                  <tag>latest</tag>
                </tags>
              </to>
            </configuration>
          </execution>
        </executions>
        <configuration>
          <to>
            <image>${dockerfile.repository}:${dockerfile.tag}</image>
          </to>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>